# protocol-to-data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKATHON.md  LICENSE  README.md  SECURITY.md  V2_ROADMAP.md  app.py  cli.py  docker-compose.chetanode.yml  docker-compose.yml  mcp_server.py  pyproject.toml  render.yaml  requirements.txt
.claude/skills/protocol-to-data/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: chetanode-ssh.sh  self-host-chetanode.md
docs/: ARCHITECTURE.md  BUILD_PLAN.md  DEMO_SCRIPT.md  DEPLOY.md  FUTURE_SHARED_EXTRACTION_LIBRARY.md  IDEA.md  SPEC.md  SUBMISSION.md  TEST_PLAN.md
examples/: sample_protocol.md
prompts/: detect_anomalies.md  extract_design.md
scripts/: ptd_api_client.py  record_demo.py
src/protocol_to_data/: __init__.py  anomalies.py  copilot.py  ctg_validator.py  download.py  enrich.py  extract.py  generate.py  grounding.py  history.py  ingest.py  llm.py  loop.py  rbac.py  sanitize.py  schemas.py  validate.py
tests/: test_anomalies.py  test_api.py  test_api_client.py  test_cache.py  test_copilot.py  test_ctg.py  test_deploy.py  test_dictionary.py  test_download.py  test_edge_cases.py  test_enrich.py  test_enterprise.py  test_extract.py  test_generate.py  test_grounding.py  test_history.py  test_integrity.py  test_llm_config.py  test_loop.py  test_mcp.py  test_oncology.py  test_sanitize.py  test_schemas.py  test_usage.py
(+1 files in other folders)
